# CameraFilterRenderEngine

./: LICENSE.txt  README.md  settings.gradle.kts
FilterRenderEngine/: build.gradle.kts
FilterRenderEngine/src/androidTest/java/com/bisw/renderengine/: ExampleInstrumentedTest.java
FilterRenderEngine/src/main/cpp/: CMakeLists.txt
FilterRenderEngine/src/main/cpp/engine/: CMakeLists.txt  JNIAssetFile.cpp  JNIAssetFile.h  JNIGLEngine.cpp  JNIGLEngine.h
FilterRenderEngine/src/main/cpp/engine/base/: Macro.h  Uncopyable.hpp
FilterRenderEngine/src/main/cpp/engine/eglcore/: EglConfig.cpp  EglConfig.h  EglContext.cpp  EglContext.h  EglCore.cpp  EglCore.h  EglSurface.cpp  EglSurface.h
FilterRenderEngine/src/main/cpp/engine/glm/: CMakeLists.txt
FilterRenderEngine/src/main/cpp/engine/render/: GLDataTypeDef.h  GLDefaultShader.cpp  GLDefaultShader.h  GLEGLImageTexture.cpp  GLEGLImageTexture.h  GLFrameBuffer.cpp  GLFrameBuffer.h  GLModel.cpp  GLModel.h  GLOESTexture.cpp  GLOESTexture.h  GLProgram.cpp  GLProgram.h  GLProgramManager.cpp  GLProgramManager.h  GLProgramUtil.cpp  GLProgramUtil.h  GLQuadModel.cpp  GLQuadModel.h  GLQuadRenderPass.cpp  GLQuadRenderPass.h  GLRender2Texture.cpp  GLRender2Texture.h  GLRenderBase.h  GLRenderPass.cpp  GLRenderPass.h  GLRenderRoot.cpp  GLRenderRoot.h  GLRenderThreadBase.cpp  GLRenderThreadBase.h  GLRenderThreadMain.cpp  GLRenderThreadMain.h  GLTexture.cpp  GLTexture.h  GLTexture2D.cpp  GLTexture2D.h
FilterRenderEngine/src/main/cpp/engine/util/: GLDeviceInfo.cpp  GLDeviceInfo.h  GLImageDef.h  GLUtil.cpp  GLUtil.h  LoadImageUtil.cpp  LogUtil.h
FilterRenderEngine/src/main/java/com/bisw/filterRenderEngine/: NativeGLRender.java
FilterRenderEngine/src/test/java/com/bisw/renderengine/: ExampleUnitTest.java
app/: build.gradle.kts
app/src/androidTest/java/com/bisw/camera/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: Image_0_frag.glsl  cameraOESAperture.glsl  cameraOESBlue.glsl  cameraOESGray.glsl  cameraOESShader.vert  image_animationfrag.glsl  image_dipfrag.glsl  image_heartfrag.glsl  image_noisefrag.glsl  imagevert.glsl
app/src/main/java/com/bisw/camera/: ActualCameraView.java  ActualView.java  ImageAnimationView.java  MainActivity.java
app/src/main/java/com/bisw/camera/base/: BaseCameraSurfaceView.java  BaseCameraTextureView.java  BaseGLESCameraSurfaceView.java  BaseGLESCameraTextureView.java  BaseView.java  Camera2Manager.java  CameraCallback.java  CameraManager.java  ICameraManager.java  IPictureBufferCallback.java  IPreviewBufferCallback.java  RenderOESCameraHandler.java  RenderOESCameraThread.java  SavePictureCallback.java  Utils.java
app/src/main/java/com/bisw/camera/view/: Camera2GLESSurfaceView.java  Camera2GLESTextureView.java  Camera2SurfaceView.java  Camera2TextureView.java  CameraGLESSurfaceView.java  CameraGLESTextureView.java  CameraSurfaceView.java  CameraTextureView.java
app/src/main/res/drawable/: btn_capture_bg.xml  img_switch_bg.xml  img_switch_pressed.xml
app/src/main/res/layout/: activity_imageanimation.xml  activity_main.xml  activity_oessurface_camera.xml  activity_oessurface_camera2.xml  activity_oestexture_camera.xml  activity_oestexture_camera2.xml  activity_surface_camera.xml  activity_surface_camera2.xml  activity_texture_camera.xml  activity_texture_camera2.xml  item.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/bisw/camera/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
